--- a/EcommerceProject/src/pages/About/about.css
+++ b/EcommerceProject/src/pages/About/about.css
@@ -73,7 +73,7 @@
 .values-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-  gap: 20px;
+  gap: 0px;
 }
 
 .value-card {
@@ -83,6 +83,8 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   animation: fadeInUp 1s ease-in-out;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .value-card:hover {
