--- a/EcommerceProject/src/components/Header/header.css
+++ b/EcommerceProject/src/components/Header/header.css
@@ -114,7 +114,7 @@ nav {
   transform: translateY(-50%);
   border: none;
   background: transparent;
-  color: inherit;
+  color: white;
   padding: 4px;
   cursor: pointer;
   display: flex;
