--- a/EcommerceProject/src/pages/Products/products.css
+++ b/EcommerceProject/src/pages/Products/products.css
@@ -98,7 +98,7 @@
 
 .product-card img {
   width: 100%;
-  height: 160px;
+  height: 100%;
   object-fit: cover;
   border-bottom: 1px solid var(--color-border);
 }
